# blab-chatbot-watson

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py  settings_watson_TEMPLATE.py  setup.cfg
docs/: conf.py  index.rst  title.rst
src/blab_chatbot_watson/: __init__.py  __main__.py  conversation_watson.py  server.py  watson_assistant_bot.py  watson_settings_format.py
