[build-system]
requires = ["poetry-core>=1.1.0a7"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true

[tool.poetry]
name = "blab-chatbot-watson"
version = "0.0.1dev"
description = ""
authors = ["C4AI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ibm-watson = "^6.0.0"
websocket-client = "^1.1.0"
Flask = "^2.1.2"
colorama = "^0.4.5"
waitress = "^2.1.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
darglint = "*"
flake8 = "*"
flake8-annotations = "*"
flake8-docstrings = "*"
flake8-bugbear = "*"
python-lsp-server = { extras = ["all"], version = "*" }
pyupgrade = "*"
mypy = "^0.931"
pre-commit = "^2.18.1"
black = "^22.3.0"
