[build-system]
requires = ["poetry-core>=1.1.0a7"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "blab-chatbot-watson"
version = "0.0.1dev"
description = ""
authors = ["C4AI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ibm-watson = "^7.0.0"
websocket-client = "^1.1.0"
Flask = "^2.1.2"
colorama = "^0.4.5"
waitress = "^2.1.2"
blab-chatbot-bot-client = { extras = ["ws"], git = "https://github.com/C4AI/blab-chatbot-bot-client.git", branch = "main" }


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
darglint = "*"
flake8 = "*"
flake8-annotations = "*"
flake8-docstrings = "*"
flake8-bugbear = "*"
python-lsp-server = { extras = ["all"], version = "*" }
pyupgrade = "*"
mypy = "^1.2.0"
pre-commit = "^2.18.1"
black = "^22.3.0"
ruff = "^0.0.261"


[tool.ruff]
select = ["F", "E", "W", "C90", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "C4", "T10", "DJ", "EM", "EXE", "ISC", "ICN", "ISC002", "ISC003", "ICN", "G", "INP", "PIE", "PYI", "PT", "Q", "RSE", "RET", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN002", "ANN003", "ANN1", "ANN204", "ANN401", "ARG002", "A003", "D105", "D106", "D203", "D213", "D417", "DTZ", "I001", "TRY00"]

[tool.ruff.pydocstyle]
ignore-decorators = ["overrides.overrides"]
